--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,11 @@ h3 {
 a {
   color: #A31F34;
 }
+
+.support {
+  bottom: 0;
+  font-size: 18px;
+  margin:0px;
+  position: inherit;
+  padding-top: 50px;
+}
